<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_question"
        style="@style/text_view_style"
        android:hint="@string/hint_question"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_answer1"
        style="@style/text_view_style"
        android:hint="@string/hint_answer1"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_answer2"
        style="@style/text_view_style"
        android:hint="@string/hint_answer2"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_answer3"
        style="@style/text_view_style"
        android:hint="@string/hint_answer3"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_answer4"
        style="@style/text_view_style"
        android:hint="@string/hint_answer4"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />
</LinearLayout>